update discrim_fixes annotations

--- a/public/assets/discrim_fixes.html
+++ b/public/assets/discrim_fixes.html
@@ -65,12 +65,12 @@
   <div class="row">
     <div class="explanationA">
       <figcaption>
-        Discriminator has stride 2 convolution in first layer.<br> <i>Strong frequency 2 artifacts.</i>
+        This discriminator has stride 2 convolution in first layer.<br> <i>You should see. Strong frequency 2 artifacts.</i>
       </figcaption>
     </div>
     <div class="explanationB">
       <figcaption>
-        Discriminator has regular convolution in first layer.<br> <i>Very mild artifacts.</i>
+        This discriminator has regular convolution in first layer.<br> <i>(You can see) Very mild artifacts.</i>
       </figcaption>
     </div>
 
